--- a/index.html
+++ b/index.html
@@ -25,6 +25,20 @@
       </nav>
     </div>
   </header>
+
+  <main class="introducao-bg">
+    <div class="introducao">
+      <div class="introducao-conteudo">
+        <h1>Bicicletas fetas sob medida <span>.</span></h1>
+        <p>Bicicletas elétricas de alta precisão e qualidade, feitas sob medida para você. Explore o mundo na sua velocidade com a Bikcraft.</p>
+        <a href="./bicicleta.html">Escolha a sua</a>
+      </div>
+      <div>
+        <img src="./img/fotos/introducao.jpg" alt="Bicicleta Preta Elétrica">
+      </div>
+    </div>
+
+  </main>
 </body>
 
 </html>
