--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
   <meta name="description" content="Bicicletas elétricas de alta precisão e qualidade, feitas sob medida para você. Explore o mundo na sua velocidade com a Bikcraft.">
 
-  <link rel="stylesheet" href="./style.css">
+  <link rel="stylesheet" href="./css/style.css">
   <title>Bikcraft - Bicicletas Elétricas</title>
 
   <!--  <link rel="preconnect" href="https://fonts.googleapis.com">
