inclusão de css utilitarios

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <img src="./img/bikcraft.svg" alt="Bikcraft">
       </a>
       <nav aria-label="primaria">
-        <ul class="header-menu">
+        <ul class="header-menu cor-5">
           <li> <a href="./bicicletas.html">Bicicletas</a></li>
           <li> <a href="./seguros.html">Seguros</a></li>
           <li> <a href="./contato.html">Contato</a></li>
@@ -35,9 +35,9 @@
   <main class="introducao-bg">
     <div class="introducao">
       <div class="introducao-conteudo">
-        <h1>Bicicletas fetas sob medida <span>.</span></h1>
-        <p>Bicicletas elétricas de alta precisão e qualidade, feitas sob medida para você. Explore o mundo na sua velocidade com a Bikcraft.</p>
-        <a href="./bicicleta.html">Escolha a sua</a>
+        <h1 class="texto-grande cor-0">Bicicletas fetas sob medida <span class="cor-p1">.</span></h1>
+        <p class="texto-medio cor-5">Bicicletas elétricas de alta precisão e qualidade, feitas sob medida para você. Explore o mundo na sua velocidade com a Bikcraft.</p>
+        <a class="botao" href="./bicicleta.html">Escolha a sua</a>
       </div>
       <div>
         <img src="./img/fotos/introducao.jpg" alt="Bicicleta Preta Elétrica">
@@ -45,6 +45,8 @@
     </div>
 
   </main>
+
+  <h2 class="texto-grande">Esoolha a sua <span class="cor-p1">.</span></h2>
 </body>
 
 </html>
