--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
   <main class="introducao-bg">
     <div class="introducao">
       <div class="introducao-conteudo">
-        <h1 class="texto-grande cor-0">Bicicletas fetas sob medida <span class="cor-p1">.</span></h1>
-        <p class="texto-medio cor-5">Bicicletas elétricas de alta precisão e qualidade, feitas sob medida para você. Explore o mundo na sua velocidade com a Bikcraft.</p>
+        <h1 class="texto-grande cor-0">Bicicletas feitas sob medida <span class="cor-p1">.</span></h1>
+        <p class="font-2-l cor-5">Bicicletas elétricas de alta precisão e qualidade, feitas sob medida para você. Explore o mundo na sua velocidade com a Bikcraft.</p>
         <a class="botao" href="./bicicleta.html">Escolha a sua</a>
       </div>
       <div>
@@ -46,7 +46,7 @@
 
   </main>
 
-  <h2 class="texto-grande">Esoolha a sua <span class="cor-p1">.</span></h2>
+  <h2 class="font-1-xxl">Esoolha a sua <span class="cor-p1">.</span></h2>
 </body>
 
 </html>
