--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <img src="./img/bikcraft.svg" alt="Bikcraft">
       </a>
       <nav aria-label="primaria">
-        <ul class="header-menu cor-5">
+        <ul class="header-menu font-1-m cor-5">
           <li> <a href="./bicicletas.html">Bicicletas</a></li>
           <li> <a href="./seguros.html">Seguros</a></li>
           <li> <a href="./contato.html">Contato</a></li>
@@ -46,7 +46,7 @@
 
   </main>
 
-  <h2 class="font-1-xxl">Esoolha a sua <span class="cor-p1">.</span></h2>
+  <h2 class="font-1-xxl">Escolha a sua <span class="cor-p1">.</span></h2>
 </body>
 
 </html>
