--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
   <main class="introducao-bg">
     <div class="introducao">
       <div class="introducao-conteudo">
-        <h1 class="texto-grande cor-0">Bicicletas feitas sob medida <span class="cor-p1">.</span></h1>
+        <h1 class="font-1-xxl cor-0">Bicicletas feitas sob medida <span class="cor-p1">.</span></h1>
         <p class="font-2-l cor-5">Bicicletas elétricas de alta precisão e qualidade, feitas sob medida para você. Explore o mundo na sua velocidade com a Bikcraft.</p>
         <a class="botao" href="./bicicleta.html">Escolha a sua</a>
       </div>
@@ -46,7 +46,34 @@
 
   </main>
 
-  <h2 class="font-1-xxl">Escolha a sua <span class="cor-p1">.</span></h2>
+  <article class="bicicletas-lista">
+    <h2 class="font-1-xxl">Escolha a sua <span class="cor-p1">.</span></h2>
+    <ul>
+      <li>
+        <a href="./bicicletas/magic">
+          <img src="./img/bicicletas/magic-home.jpg" alt="Bicicleta Preta">
+          <h3 class="font-1-xl">Magic Might</h3>
+          <span class="font-2-m">R$ 2499</span>
+        </a>
+      </li>
+
+      <li>
+        <a href="./bicicletas/magic">
+          <img src="./img/bicicletas/nimbus-home.jpg" alt="Bicicleta Preta">
+          <h3 class="font-1-xl">Nimbus Stark</h3>
+          <span class="font-2-m">R$ 4499</span>
+        </a>
+      </li>
+
+      <li>
+        <a href="./bicicletas/magic">
+          <img src="./img/bicicletas/nebula-home.jpg" alt="Bicicleta Preta">
+          <h3 class="font-1-xl">Nebula Cosmic</h3>
+          <span class="font-2-m">R$ 3999</span>
+        </a>
+      </li>
+    </ul>
+  </article>
 </body>
 
 </html>
