--- a/bicicletas.html
+++ b/bicicletas.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <meta name="description" content="Termos e Condições">
+  <meta name="description" content="Bicicletas">
 
   <link rel="stylesheet" href="./css/style.css">
   <title>Bicicletas | Bikcraft</title>
