add Bicicleta Interna 2

--- a/bicicletas.html
+++ b/bicicletas.html
@@ -55,7 +55,7 @@
           <li><img src="./img/icones/rastreador.svg" alt="">Rastreador
           </li>
         </ul>
-        <a class="botao seta" href="./bicicletas/nibus.html">Mais Sobre</a>
+        <a class="botao seta" href="./bicicletas/nimbus.html">Mais Sobre</a>
       </div>
     </div>
 
