--- a/bicicletas/nimbus.html
+++ b/bicicletas/nimbus.html
@@ -6,17 +6,17 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <meta name="description" content="Termos e Condições">
+  <meta name="description" content="Nimbus">
 
   <link rel="stylesheet" href="../css/style.css">
-  <title>Termos e Condições | Bikcraft</title>
+  <title>Nimbus | Bikcraft</title>
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@1,900&family=Poppins:wght@400;600&family=Roboto:wght@400;500&display=swap" rel="stylesheet">
 </head>
 
-<body id="termos">
+<body id="bicicleta">
   <header class="header-bg">
     <div class="header container">
       <a href="../">
@@ -53,40 +53,40 @@
           <span class="font-1-xs cor-6"> <img src="../img/icones/estoque.svg" alt=""> 18 em estoque
           </span>
         </div>
+
+        <h2 class="font-1-xs cor-0">INFORMAÇÕES</h2>
+        <ul class="bicicleta-informacoes">
+          <li>
+            <img src="../img/icones/eletrica.svg" alt="">
+            <h3 class="font-1-m cor-0">Reparo Elétrico</h3>
+            <p class="font-2-xs cor-5">Garantimos o reparo completo do seu motor em caso de falhas. Sabemos que falhas são raras, mas estamos aqui para caso ocorra.</p>
+          </li>
+          <li>
+            <img src="../img/icones/carbono.svg" alt="">
+            <h3 class="font-1-m cor-0">Carbono</h3>
+            <p class="font-2-xs cor-5">Nossos quadros são feitos para durar para sempre. Mas caso algo ocorra, ficamos felizes em reparar.</p>
+          </li>
+          <li>
+            <img src="../img/icones/rastreador.svg" alt="">
+            <h3 class="font-1-m cor-0">Rastreador</h3>
+            <p class="font-2-xs cor-5">Utilizamos o GPS da sua Bikcraft em conjunto com especialistas em segurança para efetuarmos a recuperação.</p>
+          </li>
+          <li>
+            <img src="../img/icones/velocidade.svg" alt="">
+            <h3 class="font-1-m cor-0">Rapidez</h3>
+            <p class="font-2-xs cor-5">A sua Bikcraft ficará pronta para uso no mesmo dia, caso você traga ela para ser reparada em uma das filiais.</p>
+          </li>
+        </ul>
+        <h2 class="font-1-xs cor-0">FICHA TÉCNICA</h2>
+        <ul class="bicicleta-ficha font-2-s cor-4">
+          <li>Peso <span>9 kg</span></li>
+          <li>Altura <span>60 cm</span></li>
+          <li>Largura <span>120 cm</span></li>
+          <li>Profundidade <span>10 cm</span></li>
+          <li>Marchas <span>16</span></li>
+          <li>Roda <span>29</span></li>
+        </ul>
       </div>
-      <h2 class="font-1-xs cor-0">INFORMAÇÕES</h2>
-      <ul class="bicicleta-informacoes">
-        <li>
-          <img src="../img/icones/eletrica.svg" alt="">
-          <h3 class="font-1-m cor-0">Reparo Elétrico</h3>
-          <p class="font-2-xs cor-5">Garantimos o reparo completo do seu motor em caso de falhas. Sabemos que falhas são raras, mas estamos aqui para caso ocorra.</p>
-        </li>
-        <li>
-          <img src="../img/icones/carbono.svg" alt="">
-          <h3 class="font-1-m cor-0">Carbono</h3>
-          <p class="font-2-xs cor-5">Nossos quadros são feitos para durar para sempre. Mas caso algo ocorra, ficamos felizes em reparar.</p>
-        </li>
-        <li>
-          <img src="../img/icones/rastreador.svg" alt="">
-          <h3 class="font-1-m cor-0">Rastreador</h3>
-          <p class="font-2-xs cor-5">Utilizamos o GPS da sua Bikcraft em conjunto com especialistas em segurança para efetuarmos a recuperação.</p>
-        </li>
-        <li>
-          <img src="../img/icones/velocidade.svg" alt="">
-          <h3 class="font-1-m cor-0">Rapidez</h3>
-          <p class="font-2-xs cor-5">A sua Bikcraft ficará pronta para uso no mesmo dia, caso você traga ela para ser reparada em uma das filiais.</p>
-        </li>
-      </ul>
-      <h2 class="font-1-xs cor-0">FICHA TÉCNICA</h2>
-      <ul class="bicicleta-tecnica font-2-s cor-4">
-        <li>Peso <span>9 kg</span></li>
-        <li>Altura <span>60 cm</span></li>
-        <li>Largura <span>120 cm</span></li>
-        <li>Profundidade <span>10 cm</span></li>
-        <li>Marchas <span>16</span></li>
-        <li>Roda <span>29</span></li>
-      </ul>
-    </div>
   </main>
 
   <footer class="footer-bg">
@@ -121,9 +121,10 @@
             <li><a href="../contato.html">Contato</a></li>
             <li><a href="../termos.html">Termos e Condições</a></li>
           </ul>
-        </nav>
       </div>
-      <p class="footer-copy font-2-m cor-6">Bikcraft © Alguns direitos reservados.</p>
+      </nav>
+    </div>
+    <p class="footer-copy font-2-m cor-6">Bikcraft © Alguns direitos reservados.</p>
     </div>
   </footer>
 </body>
