--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     <h2 class=" container font-1-xxl">Escolha a sua <span class="cor-p1">.</span></h2>
     <ul>
       <li>
-        <a href="./bicicletas/magic">
+        <a href="./bicicletas/magic.html">
           <img src="./img/bicicletas/magic-home.jpg" alt="Bicicleta Preta">
           <h3 class="font-1-xl">Magic Might</h3>
           <span class="font-2-m">R$ 2499</span>
@@ -58,7 +58,7 @@
       </li>
 
       <li>
-        <a href="./bicicletas/magic">
+        <a href="./bicicletas/magic.html">
           <img src="./img/bicicletas/nimbus-home.jpg" alt="Bicicleta Preta">
           <h3 class="font-1-xl">Nimbus Stark</h3>
           <span class="font-2-m">R$ 4499</span>
@@ -66,7 +66,7 @@
       </li>
 
       <li>
-        <a href="./bicicletas/magic">
+        <a href="./bicicletas/nebula.html">
           <img src="./img/bicicletas/nebula-home.jpg" alt="Bicicleta Preta">
           <h3 class="font-1-xl">Nebula Cosmic</h3>
           <span class="font-2-m">R$ 3999</span>
