--- a/bicicletas/nebula.html
+++ b/bicicletas/nebula.html
@@ -6,10 +6,10 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <meta name="description" content="Nimbus">
+  <meta name="description" content="Nebula Cosmic">
 
   <link rel="stylesheet" href="../css/style.css">
-  <title>Nimbus | Bikcraft</title>
+  <title>Nebula Cosmic | Bikcraft</title>
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -35,18 +35,18 @@
   <main class="titulo-bg">
     <div>
       <div class="titulo container">
-        <p class="font-2-xl cor-5">R$ 4999</p>
-        <h1 class="font-1-xxl cor-0">Nimbus Stark<Span class="cor-p1">.</Span></h1>
+        <p class="font-2-xl cor-5">R$ 3999</p>
+        <h1 class="font-1-xxl cor-0">Nebula Cosmic<Span class="cor-p1">.</Span></h1>
       </div>
     </div>
     <div class="bicicleta container">
       <div class="bicicleta-imagens">
+        <img src="../img/bicicleta/nimbus3.jpg" alt="">
         <img src="../img/bicicleta/nimbus1.jpg" alt="">
         <img src="../img/bicicleta/nimbus2.jpg" alt="">
-        <img src="../img/bicicleta/nimbus3.jpg" alt="">
       </div>
       <div class="bicicleta-conteudo">
-        <p class="font2-l cor-5">A Nimbus Stark é a melhor Bikcraft já criada pela nossa equipe. Ela vem equipada com os melhores acessórios, o que garante maior velocidade.</p>
+        <p class="font2-l cor-5">A Nebula Cosmic é a melhor Bikcraft já criada pela nossa equipe. Ela vem equipada com os melhores acessórios, o que garante maior velocidade.</p>
         <div class="bicicleta-comprar">
           <a class="botao" href="../orcamento.html">comprar agora</a>
           <span class="font-1-xs cor-6"> <img src="../img/icones/entrega.svg" alt=""> entrega em 5 dias</span>
@@ -73,7 +73,7 @@
           </li>
           <li>
             <img src="../img/icones/velocidade.svg" alt="">
-            <h3 class="font-1-m cor-0">50 km/h</h3>
+            <h3 class="font-1-m cor-0">40 km/h</h3>
             <p class="font-2-xs cor-5">A mais rápida bicicleta elétrica disponível hoje no mercado.</p>
           </li>
         </ul>
@@ -101,10 +101,10 @@
       </li>
 
       <li>
-        <a href="./nebula.html">
-          <img src="../img/bicicletas/nebula.jpg" alt="Bicicleta Preta">
-          <h3 class="font-1-xl">Nebula Cosmic</h3>
-          <span class="font-2-m">R$ 3999</span>
+        <a href="./nimbus.html">
+          <img src="../img/bicicletas/nimbus.jpg" alt="Bicicleta Preta">
+          <h3 class="font-1-xl">Nimbus</h3>
+          <span class="font-2-m">R$ 4999</span>
         </a>
       </li>
     </ul>
