--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
       </li>
 
       <li>
-        <a href="./bicicletas/magic.html">
+        <a href="./bicicletas/nimbus.html">
           <img src="./img/bicicletas/nimbus-home.jpg" alt="Bicicleta Preta">
           <h3 class="font-1-xl">Nimbus Stark</h3>
           <span class="font-2-m">R$ 4499</span>
