--- a/contato.html
+++ b/contato.html
@@ -48,7 +48,7 @@
           <p>Rio de Janeiro - RJ</p>
           <p>Brasil - Terra - Vita Láctea</p>
         </div>
-        <address class="contao-maios font-2-s cor-4">
+        <address class="contato-meios font-2-s cor-4">
           <a href="mailto:contato@bikcraft.com">contato@bikcraft.com</a>
           <a href="mailto:assistencia@bikcraft.com">assistencia@bikcraft.com</a>
           <a href="tel:+552199999999">+55 21 9999-9999</a>
