--- a/orcamento.html
+++ b/orcamento.html
@@ -3,17 +3,12 @@
 
 <head>
   <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <meta name="description" content="Orçamento">
+  <title>Orçamento | Bikcraft</title>
+  <meta name="description" content="orcamento">
 
   <link rel="stylesheet" href="./css/style.css">
-  <title>Orçamento | Bikcraft</title>
-
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@1,900&family=Poppins:wght@400;600&family=Roboto:wght@400;500&display=swap" rel="stylesheet">
 </head>
 
 <body id="orcamento">
@@ -35,9 +30,10 @@
   <main>
     <div class="titulo-bg">
       <div class="titulo container">
-        <p class="font-2-l-b cor-5">Cotações no seu email</p>
-        <h1 class="font-1-xxl cor-0">solicite um orçamento<Span class="cor-p1">.</Span></h1>
+        <p class="font-2-l-b cor-5">Cotaccµes no seu email</p>
+        <h1 class="font-1-xxl cor-0">solicite um orcamento<Span class="cor-p1">.</Span></h1>
       </div>
+
     </div>
 
     <form class="orcamento container" action="./">
@@ -51,18 +47,28 @@
         <label for="seguro">Seguro</label>
 
         <div class="orcamento-conteudo" id="orcamento-bikcraft">
-          <h2 class="font-1-m cor-0">Escolha a sua (BIKCRAFT)</h2>
-          <p class="font-1-m cor-0">este é um conteudo teste</p>
+          <h2 class="font-1-xs cor-5">Escolha a sua </h2>
+
+          <input type="radio" name="produto" value="nimbus" id="nimbus">
+          <label for="nimbus">Nimbus Stark <span>R$ 4999</span></label>
+
+          <input type="radio" name="produto" value="magic" id="magic">
+          <label for="magic">Magic Might <span>R$ 2499</span></label>
+
+          <input type="radio" name="produto" value="nebula" id="nebula">
+          <label for="nebula">Nebula Cosmic <span>R$ 3999</span></label>
         </div>
 
         <div class="orcamento-conteudo" id="orcamento-seguro">
-          <h2 class="font-1-m cor-0">Escolha o plano</h2>
-          <p class="font-1-m cor-0">este é um conteudo teste</p>
+          <h2 class="font-1-xs cor-5">Escolha o plano</h2>
+
+          <input type="radio" name="produto" value="prata" id="prata">
+          <label for="prata">Prata <span>R$ 199</span></label>
+
+          <input type="radio" name="produto" value="ouro" id="ouro">
+          <label for="ouro">Ouro <span>R$ 299</span></label>
         </div>
-
-
       </div>
-
       <div class="orcamento-dados form">
         <h2 class="font-1-xs cor-9 col-2">Dados Pessoais</h2>
         <div>
@@ -92,7 +98,7 @@
         </div>
 
         <div>
-          <label for="numero">Número</label>
+          <label for="numero">Ncºmero</label>
           <input type="text" id="numero" name="numero">
         </div>
 
@@ -115,7 +121,7 @@
           <label for="estado">Estado</label>
           <input type="text" id="estado" name="estado">
         </div>
-        <button class=" botao font-1-m cor-p5 col-2">solicitar orçamento</button>
+        <button class=" botao font-1-m cor-p5 col-2">solicitar orcamento</button>
       </div>
     </form>
   </main>
@@ -144,17 +150,17 @@
         </div>
       </div>
       <div class="footer-informacoes">
-        <h3 class="font-2-l-b cor-0">Informações</h3>
+        <h3 class="font-2-l-b cor-0">Informaccµes</h3>
         <nav>
           <ul class="font-2-m cor-5">
             <li><a href="./bicicletas.html">Bicicletas</a></li>
             <li><a href="./seguros.html">Seguros</a></li>
             <li><a href="./contato.html">Contato</a></li>
-            <li><a href="./termos.html">Termos e Condições</a></li>
+            <li><a href="./termos.html">Termos e Condiccµes</a></li>
           </ul>
         </nav>
       </div>
-      <p class="footer-copy font-2-m cor-6">Bikcraft © Alguns direitos reservados.</p>
+      <p class="footer-copy font-2-m cor-6">Bikcraft Â© Alguns direitos reservados.</p>
     </div>
   </footer>
 </body>
