--- a/orcamento.html
+++ b/orcamento.html
@@ -30,8 +30,8 @@
   <main>
     <div class="titulo-bg">
       <div class="titulo container">
-        <p class="font-2-l-b cor-5">Cotaccµes no seu email</p>
-        <h1 class="font-1-xxl cor-0">solicite um orcamento<Span class="cor-p1">.</Span></h1>
+        <p class="font-2-l-b cor-5">Cotacões no seu email</p>
+        <h1 class="font-1-xxl cor-0">solicite um orçamento<Span class="cor-p1">.</Span></h1>
       </div>
 
     </div>
@@ -51,13 +51,42 @@
 
           <input type="radio" name="produto" value="nimbus" id="nimbus">
           <label for="nimbus">Nimbus Stark <span>R$ 4999</span></label>
+          <div class="orcamento-detalhes">
+            <ul class="font-1-xs cor-8">
+              <li><img src="./img/icones/eletrica.svg" alt="">Motor Elétrico</li>
+              <li><img src="./img/icones/carbono.svg" alt="">Fibra de Carbono</li>
+              <li><img src="./img/icones/velocidade.svg" alt="">50 km/h</li>
+              <li><img src="./img/icones/rastreador.svg" alt="">Rsatreador</li>
+            </ul>
+            <img src="./img/bicicletas/nimbus.jpg" alt="Bicicleta Preta">
+          </div>
 
           <input type="radio" name="produto" value="magic" id="magic">
           <label for="magic">Magic Might <span>R$ 2499</span></label>
+          <div class="orcamento-detalhes">
+            <ul class="font-1-xs cor-8">
+              <li><img src="./img/icones/eletrica.svg" alt="">Motor Elétrico</li>
+              <li><img src="./img/icones/carbono.svg" alt="">Fibra de Carbono</li>
+              <li><img src="./img/icones/velocidade.svg" alt="">45 km/h</li>
+              <li><img src="./img/icones/rastreador.svg" alt="">Rsatreador</li>
+            </ul>
+            <img src="./img/bicicletas/magic.jpg" alt="Bicicleta Preta">
+          </div>
 
           <input type="radio" name="produto" value="nebula" id="nebula">
           <label for="nebula">Nebula Cosmic <span>R$ 3999</span></label>
+          <div class="orcamento-detalhes">
+            <ul class="font-1-xs cor-8">
+              <li><img src="./img/icones/eletrica.svg" alt="">Motor Elétrico</li>
+              <li><img src="./img/icones/carbono.svg" alt="">Fibra de Carbono</li>
+              <li><img src="./img/icones/velocidade.svg" alt="">40 km/h</li>
+              <li><img src="./img/icones/rastreador.svg" alt="">Rsatreador</li>
+            </ul>
+            <img src="./img/bicicletas/nebula.jpg" alt="Bicicleta Branca">
+          </div>
+
         </div>
+
 
         <div class="orcamento-conteudo" id="orcamento-seguro">
           <h2 class="font-1-xs cor-5">Escolha o plano</h2>
@@ -98,7 +127,7 @@
         </div>
 
         <div>
-          <label for="numero">Ncºmero</label>
+          <label for="numero">Número</label>
           <input type="text" id="numero" name="numero">
         </div>
 
@@ -108,8 +137,8 @@
         </div>
 
         <div>
-          <label for="bairo">Bairo</label>
-          <input type="text" id="bairo" name="bairo">
+          <label for="bairro">Bairro</label>
+          <input type="text" id="bairro" name="bairro">
         </div>
 
         <div>
