--- a/bicicletas.html
+++ b/bicicletas.html
@@ -8,6 +8,7 @@
 
   <meta name="description" content="Bicicletas">
 
+  <link rel="preload" href="./css/style.css" as="style">
   <link rel="stylesheet" href="./css/style.css">
   <title>Bicicletas | Bikcraft</title>
 
@@ -20,10 +21,10 @@
   <header class="header-bg">
     <div class="header container">
       <a href="./">
-        <img src="./img/bikcraft.svg" alt="Bikcraft">
+        <img src="./img/bikcraft.svg" width="136" height="32" alt="Bikcraft">
       </a>
       <nav aria-label="primaria">
-        <ul class="header-menu font-1-m cor-5">
+        <ul class="header-menu font-1-m cor-0">
           <li> <a href="./bicicletas.html">Bicicletas</a></li>
           <li> <a href="./seguros.html">Seguros</a></li>
           <li> <a href="./contato.html">Contato</a></li>
@@ -42,17 +43,17 @@
 
 
     <div class="bicicletas container">
-      <div class="bicicletas-imagem"><img src="./img/bicicletas/nimbus.jpg" alt="Bicicleta Preta">
+      <div class="bicicletas-imagem"><img src="./img/bicicletas/nimbus.jpg" width="1120" height="1680" alt="Bicicleta Preta">
         <span class="font-2-m cor-0">R$ 4999</span>
       </div>
       <div class="bicicletas-conteudo">
         <h2 class="font-1-xl">Nimbus Stark</h2>
         <p class="font-2-s cor-8">A Nimbus Stark é a melhor Bikcraft já criada pela nossa equipe. Ela vem equipada com os melhores acessórios, o que garante maior velocidade.</p>
         <ul class="font-1-m cor-8">
-          <li><img src="./img/icones/eletrica.svg" alt="">Motor Elétrico</li>
-          <li><img src="./img/icones/carbono.svg" alt="">Fibra de Carbono</li>
-          <li><img src="./img/icones/velocidade.svg" alt="">50 km/h</li>
-          <li><img src="./img/icones/rastreador.svg" alt="">Rastreador
+          <li><img src="./img/icones/eletrica.svg" width="24" height="24" alt="">Motor Elétrico</li>
+          <li><img src="./img/icones/carbono.svg" width="24" height="24" alt="">Fibra de Carbono</li>
+          <li><img src="./img/icones/velocidade.svg" width="24" height="24" alt="">50 km/h</li>
+          <li><img src="./img/icones/rastreador.svg" width="24" height="24" alt="">Rastreador
           </li>
         </ul>
         <a class="botao seta" href="./bicicletas/nimbus.html">Mais Sobre</a>
@@ -61,17 +62,17 @@
 
     <div class="bicicletas-bg">
       <div class="bicicletas container">
-        <div class="bicicletas-imagem"><img src="./img/bicicletas/magic.jpg" alt="Bicicleta Preta">
+        <div class="bicicletas-imagem"><img src="./img/bicicletas/magic.jpg" width="1120" height="1680" alt="Bicicleta Preta">
           <span class="font-2-m cor-0">R$ 2499</span>
         </div>
         <div class="bicicletas-conteudo">
           <h2 class="font-1-xl cor-0">Magic Might</h2>
           <p class="font-2-s cor-5">A Magic Might é a melhor Bikcraft já criada pela nossa equipe. Ela vem equipada com os melhores acessórios, o que garante maior velocidade.</p>
           <ul class="font-1-m cor-5">
-            <li><img src="./img/icones/eletrica.svg" alt="">Motor Elétrico</li>
-            <li><img src="./img/icones/carbono.svg" alt="">Fibra de Carbono</li>
-            <li><img src="./img/icones/velocidade.svg" alt="">45 km/h</li>
-            <li><img src="./img/icones/rastreador.svg" alt="">Rastreador</li>
+            <li><img src="./img/icones/eletrica.svg" width="24" height="24" alt="">Motor Elétrico</li>
+            <li><img src="./img/icones/carbono.svg" width="24" height="24" alt="">Fibra de Carbono</li>
+            <li><img src="./img/icones/velocidade.svg" width="24" height="24" alt="">45 km/h</li>
+            <li><img src="./img/icones/rastreador.svg" width="24" height="24" alt="">Rastreador</li>
           </ul>
           <a class="botao seta" href="./bicicletas/magic.html">Mais Sobre</a>
 
@@ -80,17 +81,17 @@
     </div>
 
     <div class="bicicletas container">
-      <div class="bicicletas-imagem"><img src="./img/bicicletas/nebula.jpg" alt="Bicicleta Branca">
+      <div class="bicicletas-imagem"><img src="./img/bicicletas/nebula.jpg" width="1120" height="1680" alt="Bicicleta Branca">
         <span class="font-2-m cor-0">R$ 3999</span>
       </div>
       <div class="bicicletas-conteudo">
         <h2 class="font-1-xl">Nebula Cosmic</h2>
         <p class="font-2-s cor-8">A Nebula Cosmic é a melhor Bikcraft já criada pela nossa equipe. Ela vem equipada com os melhores acessórios, o que garante maior velocidade.</p>
         <ul class="font-1-m cor-8">
-          <li><img src="./img/icones/eletrica.svg" alt="">Motor Elétrico</li>
-          <li><img src="./img/icones/carbono.svg" alt="">Fibra de Carbono</li>
-          <li><img src="./img/icones/velocidade.svg" alt="">50 km/h</li>
-          <li><img src="./img/icones/rastreador.svg" alt="">Rastreador</li>
+          <li><img src="./img/icones/eletrica.svg" width="24" height="24" alt="">Motor Elétrico</li>
+          <li><img src="./img/icones/carbono.svg" width="24" height="24" alt="">Fibra de Carbono</li>
+          <li><img src="./img/icones/velocidade.svg" width="24" height="24" alt="">50 km/h</li>
+          <li><img src="./img/icones/rastreador.svg" width="24" height="24" alt="">Rastreador</li>
         </ul>
         <a class="botao seta" href="./bicicletas/nebula.html">Mais Sobre</a>
 
@@ -102,7 +103,7 @@
 
   <footer class="footer-bg">
     <div class="footer container">
-      <img src="./img/bikcraft.svg" alt="Bikcraft">
+      <img src="./img/bikcraft.svg" width="136" height="32" alt="Bikcraft">
       <div class="footer-contato">
         <h3 class="font-2-l-b cor-0">Contato</h3>
         <ul class="font-2-m cor-5">
@@ -113,13 +114,13 @@
         </ul>
         <div class="footer-redes">
           <a href="./">
-            <img src="./img/redes/instagram.svg" alt="Instagram">
+            <img src="./img/redes/instagram.svg" width="32" height="32" alt="Instagram">
           </a>
           <a href="./">
-            <img src="./img/redes/facebook.svg" alt="Facebook">
+            <img src="./img/redes/facebook.svg" width="32" height="32" alt="Facebook">
           </a>
           <a href="./">
-            <img src="./img/redes/youtube.svg" alt="Youtube">
+            <img src="./img/redes/youtube.svg" width="32" height="32" alt="Youtube">
           </a>
         </div>
       </div>
