--- a/contato.html
+++ b/contato.html
@@ -8,6 +8,7 @@
 
   <meta name="description" content="Contato">
 
+  <link rel="preload" href="./css/style.css" as="style">
   <link rel="stylesheet" href="./css/style.css">
   <title>Contato | Bikcraft</title>
 
@@ -20,10 +21,10 @@
   <header class="header-bg">
     <div class="header container">
       <a href="./">
-        <img src="./img/bikcraft.svg" alt="Bikcraft">
+        <img src="./img/bikcraft.svg" width="136" height="32" alt="Bikcraft">
       </a>
       <nav aria-label="primaria">
-        <ul class="header-menu font-1-m cor-5">
+        <ul class="header-menu font-1-m cor-0">
           <li> <a href="./bicicletas.html">Bicicletas</a></li>
           <li> <a href="./seguros.html">Seguros</a></li>
           <li> <a href="./contato.html">Contato</a></li>
@@ -55,13 +56,13 @@
         </address>
         <div class="contato-redes">
           <a href="./">
-            <img src="./img/redes/instagram-p.svg" alt="Instagram">
+            <img src="./img/redes/instagram-p.svg" width="32" height="32" alt="Instagram">
           </a>
           <a href="./">
-            <img src="./img/redes/facebook-p.svg" alt="Facebook">
+            <img src="./img/redes/facebook-p.svg" width="32" height="32" alt="Facebook">
           </a>
           <a href="./">
-            <img src="./img/redes/youtube-p.svg" alt="Youtube">
+            <img src="./img/redes/youtube-p.svg" width="32" height="32" alt="Youtube">
           </a>
         </div>
       </section>
@@ -128,7 +129,7 @@
 
   <footer class="footer-bg">
     <div class="footer container">
-      <img src="./img/bikcraft.svg" alt="Bikcraft">
+      <img src="./img/bikcraft.svg" width="136" height="32" alt="Bikcraft">
       <div class="footer-contato">
         <h3 class="font-2-l-b cor-0">Contato</h3>
         <ul class="font-2-m cor-5">
